feat: v3.1.0 — harness architecture, pentest skill, rules deep upgrade
WHAT:
- Rewrite CLAUDE.md as harness entry point with 5-phase workflow,
  hard blocks, and harness awareness section
- Rewrite README.md for v3.2.0 (19 skills, 9 agents, 13 hooks, 14 commands)
- Add pentest skill with OWASP Top 10 scanning, CVE detection, 6 scripts
- Add config system (defaults.json, devco-config.schema.json)
- Add 7 new hooks (verify-fix-loop, workflow-tracker, build-checkpoint,
  observability-trace, post-compact, git-guard logic, subagent-init)

SKILLS UPGRADED (19 skills audited, all ≤800 token budget):
- P0: Fix token violations — continuous-learning, pentest (extracted to references)
- P1: summer-core (types reference), observability-patterns (logging + tracing refs),
  coding-standards (Lombok table)
- P2: spring-security (OAuth2/OIDC ref), spring-patterns (Boot 3.x ref),
  summer-rest + summer-data (enforcement rules)
- P3: messaging-patterns (event-architecture ref — saga, outbox, event sourcing),
  architecture (event-sourcing ref)
- Cross-cutting: All 6 Summer skills now have enforcement Rules sections,
  18/19 skills have Related Skills sections, 48 reference files total

RULES DEEP UPGRADE (8/10 rules rewritten with research-backed principles):
- security: Spring Security 6.x patterns, Hard Blocks table, SBOM/supply chain,
  Argon2 password encoding, component security by layer
- observability: Structured logging (JSON/ECS), Micrometer Observation API,
  cardinality management, SLO-based alerting philosophy
- architecture-patterns: DDD tactical (Vaughn Vernon aggregate rules), value objects,
  ArchUnit enforcement code, use case independence, when-to-skip hexagonal
- testing: ArchUnit architecture tests, contract testing (Spring Cloud Contract),
  BlockHound, Testcontainers best practices, test philosophy
- coding-style: Value objects pattern, @ConfigurationProperties over @Value,
  timeout requirements, error handling code examples
- api-design: Idempotency keys, as